# extractHairs

./: Alignment.h  CMakeLists.txt  bamread.cpp  bamread.h  estimate_hmm_params.cpp  estimate_hmm_params.h  extracthairs.cpp  fosmidbam_hairs.cpp  hapfragments.cpp  hapfragments.h  hashtable.cpp  parsebamread.cpp  parsebamread.h  print_clusters.cpp  print_clusters.h  readfasta.cpp  readvariant.cpp  readvariant.h  realign_pairHMM.cpp  realignbamread.cpp  realignbamread.h
